--- a/src/app/6-super-fluid/shared/components/stream-display/stream-display/stream-display.component.html
+++ b/src/app/6-super-fluid/shared/components/stream-display/stream-display/stream-display.component.html
@@ -131,6 +131,111 @@
                         </div>
                     </div>
                 </div>
+                <div color="#F5AC37" class="sc-hAcGzb hafBMv">
+                    <div data-cy="balances-currency-icon" class="sc-ilfuhL sc-eGPXGI jeclXO krhdVj"><img
+                            src="https://assets.superfluid.finance/tokens/dai/icon.svg" alt="daix-img"
+                            style="width: 24px; height: 24px; opacity: 1;"></div>
+                    <div class="Title_wrapper__1M0ZE" style="margin: 0px; width: max-content;">
+                        <h1 class="Title_h5__19dLf Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                            data-cy="balances-currency-name">DAI</h1>
+                    </div>
+                    <div class="sc-bilyIR gkdEmo"><span class="sc-XxNYO eTDsSE">
+                            <div class="Title_wrapper__1M0ZE">
+                                <h1 class="Title_h5__19dLf Title_medium__zzETA Title_right__ToG9D Title_default__1PPrv"
+                                    data-cy="balances-DAIx-value" style="font-variant-numeric: tabular-nums;">
+                                    ${{stream.balanceDAI}}
+                                </h1>
+                            </div>
+                        </span></div>
+                    <div class="sc-xiLah boIBcQ">
+                        <div class="Card_wrapper__Q4Y0q Card_card4__3GdIY"
+                            style="padding: 32px; width: 334px; height: auto;">
+                            <div class="sc-dVNjXY etuUsH">
+                                <div class="Title_wrapper__1M0ZE">
+                                    <h1
+                                        class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv">
+                                        Your DAIx balance in <span style="color: rgb(16, 187, 52);">USD</span></h1>
+                                </div>
+                                <div class="sc-jHkVzv jHSdmZ">
+                                    <div class="Title_wrapper__1M0ZE">
+                                        <h1 class="Title_h2__DJAA2 Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                            style="font-variant-numeric: tabular-nums;">${{balanceZeroDec}}.{{twoDec}}
+                                        </h1>
+                                    </div>
+                                    <div class="sc-ilfuhL sc-eGPXGI jeclXO krhdVj" style="margin-left: 8px;"><img
+                                            src="https://assets.superfluid.finance/tokens/dai/icon.svg" alt="daix-img"
+                                            style="width: 24px; height: 24px; opacity: 1;"></div>
+                                </div>
+                            </div>
+                            <div class="sc-ksHpcM hkPZIR">
+                                <div class="sc-jlsrNB gRWsMH"><span class="sc-iWBNLc kiYvKG">
+                                        <div class="Title_wrapper__1M0ZE">
+                                            <h1 class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                                data-cy="monthly_net_message">Monthly net flow in <span
+                                                    style="color: rgb(16, 187, 52);">USD</span></h1>
+                                        </div>
+                                    </span><span class="sc-edERGn iBCyTO">
+                                        <div class="Title_wrapper__1M0ZE">
+                                            <h1
+                                                class="Title_h2__DJAA2 Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv">
+                                                <div class="sc-jvvksu jcGDKI"><span data-cy="total_flow_rate"
+                                                        style="font-variant-numeric: tabular-nums;">${{monthlyInflow}}
+                                                    </span><span></span>
+                                                </div>
+                                            </h1>
+                                        </div>
+                                    </span></div>
+                                <div class="sc-kHxTfl evtMrq">
+                                    <div class="Title_wrapper__1M0ZE">
+                                        <h1
+                                            class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv">
+                                            Streaming in &amp; out</h1>
+                                    </div>
+                                    <div class="sc-cVAmsi cJcRNl"><span class="sc-dkqQuH iSZbrz">
+                                            <div class="Title_wrapper__1M0ZE">
+                                                <h1 class="Title_h5__19dLf Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                                    data-cy="total_incomming"
+                                                    style="font-variant-numeric: tabular-nums;">+${{monthlyInflow}}</h1>
+                                            </div>
+                                        </span><span class="sc-eicpiI bkdREN">
+                                            <div class="Title_wrapper__1M0ZE">
+                                                <h1
+                                                    class="Title_small__359S9 Title_body__fA6cP Title_left__S2mjG Title_default__1PPrv">
+                                                    month</h1>
+                                            </div>
+                                        </span><span class="sc-ewSTlh kWOzZj"><svg width="24px" height="24px"
+                                                viewBox="0 0 24 24">
+                                                <g fill="none">
+                                                    <path d="M0 0h24v24H0z"></path>
+                                                    <path fill="#10BB34" d="m17 14-5-5-5 5z"></path>
+                                                </g>
+                                            </svg></span></div>
+                                    <div class="sc-cVAmsi cJcRNl"><span class="sc-dkqQuH iSZbrz">
+                                            <div class="Title_wrapper__1M0ZE">
+                                                <h1 class="Title_h5__19dLf Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                                    data-cy="total_outgoing"
+                                                    style="font-variant-numeric: tabular-nums;">-$0.00</h1>
+                                            </div>
+                                        </span><span class="sc-eicpiI bkdREN">
+                                            <div class="Title_wrapper__1M0ZE">
+                                                <h1
+                                                    class="Title_small__359S9 Title_body__fA6cP Title_left__S2mjG Title_default__1PPrv">
+                                                    month</h1>
+                                            </div>
+                                        </span><span class="sc-ewSTlh kWOzZj"><svg xmlns="http://www.w3.org/2000/svg"
+                                                width="24px" height="24px" viewBox="0 0 24 24">
+                                                <g fill="none">
+                                                    <path d="M0 0h24v24H0z"></path>
+                                                    <path fill="#F3023B" d="m7 10 5 5 5-5z"></path>
+                                                </g>
+                                            </svg></span></div>
+                                    <div fill="4" class="sc-hJZKUC hCpyUv"></div>
+                                    <div fill="4" class="sc-hYQoXb ffwkXP"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
