--- a/src/app/6-super-fluid/stream/stream.component.html
+++ b/src/app/6-super-fluid/stream/stream.component.html
@@ -22,24 +22,29 @@
     Stop Query
   </button>
 </p>
-<div class="wrapper_blocks" >
+<div class="wrapper_blocks">
 
-  <div>
-    <address-show style="font-size:22px;font-weight:400" [address_to_show]="signerAdress"></address-show>   <i (click)="doFaucet()" style="
-    position: absolute;
-    top: 3px;
-    left: 6px;
-    font-size: 15px;
-    color: #ff4081;
-    cursor: pointer;
-  " class="material-icons">local_gas_station</i>
- 
-    <stream-display class="user_block" *ngIf="signerStream !== undefined"  [stream]="signerStream"></stream-display>
+
+  <div class="user">
+    <h1>Alice  <i (click)="launchStream('alice')" style="" class="material-icons stream">water</i> </h1>
+    <div style="display: inline-flex;align-items: center;">
+      <i (click)="doFaucet('alice')" style="" class="material-icons faucet">local_gas_station</i>
+      <address-show style="font-size:22px;font-weight:400" [address_to_show]="fake_accounts.alice.user_address">
+      </address-show> 
+    </div>
+    <stream-display class="user_block" *ngIf="aliceStream !== undefined" [stream]="aliceStream"></stream-display>
   </div>
 
-  <div>
-  <stream-display class="user_block" *ngIf="aliceStream !== undefined"  [stream]="aliceStream"></stream-display>
+  <div class="user">
+    <h1>Eve  <i (click)="launchStream('eve')" style="" class="material-icons stream">water</i></h1>
+    <div style="display: inline-flex;align-items: center;">
+      <address-show style="font-size:22px;font-weight:400" [address_to_show]="fake_accounts.eve.user_address">
+      </address-show> <i (click)="doFaucet('eve')" style="" class="material-icons faucet">local_gas_station</i>
+    </div>
+    <stream-display class="user_block" *ngIf="eveStream!== undefined" [stream]="eveStream"></stream-display>
   </div>
+
+
 
   <!-- 
   <div>
