--- a/src/app/dapp-components/dialog/operation/operation.component.html
+++ b/src/app/dapp-components/dialog/operation/operation.component.html
@@ -1,13 +1,32 @@
 <form  [formGroup]="input_form" class="example-form">
-    <mat-form-field style="width:100%" class="example-full-width" appearance="fill">
-      <mat-label>to</mat-label>
-      <input formControlName="to" matInput placeholder="to" value="Sushi">
-    </mat-form-field>
+
+      <mat-form-field   appearance="fill" style="width:100%;">
+        <mat-select [formControl]="actionCtrl">
+          <mat-option
+            [value]="action.value"
+            *ngFor="let action of actions"
+            >{{action.name }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field   appearance="fill" style="width:100%;">
+        <mat-label>To Whom</mat-label>
+        <mat-select formControlName="toCtrl">
+          <mat-option
+            [value]="user"
+            *ngFor="let user of users"
+            >{{user }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+
   
     <mat-form-field style="width:100%" class="example-full-width" appearance="fill">
-        <mat-label>Amount in US$</mat-label>
-        <input formControlName="amount"  matInput placeholder="Amount in US$" value="Sushi">
+        <mat-label>Amount in US$/Month</mat-label>
+        <input formControlName="amountCtrl"  matInput placeholder="Amount in US$/month" value="Sushi">
       </mat-form-field>
+      <span style="color:green">FlowRate: {{flowRatePerSecond.toFixed(0)}} gwei/seecond</span>
       <div style="text-align: right;" class="example-button-container">
         <button  (click)="doTransaction()"  [disabled]="input_form.invalid" mat-fab color="warn" aria-label="Example icon button with a heart icon">
           <mat-icon>send</mat-icon>
