--- a/src/app/6-super-fluid/shared/components/stream-display/stream-display/stream-display.component.html
+++ b/src/app/6-super-fluid/shared/components/stream-display/stream-display/stream-display.component.html
@@ -7,8 +7,8 @@
         <div class="Title_wrapper__1M0ZE">
             <h1 class="Title_h1__3XnJ3 Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
                 data-cy="total_balance" style="font-variant-numeric: tabular-nums;">
-                <div class="sc-fbyfCU eXneDc">$<span class="sc-gsNilK fWhdln">{{balanceZeroDec}}</span><span
-                        class="sc-GEbAx hRzVdO">.</span><span class="sc-bXTejn glsbck">{{twoDec}}</span><span
+                <div class="sc-fbyfCU eXneDc">$<span class="sc-gsNilK fWhdln"></span><span
+                        class="sc-GEbAx hRzVdO"></span><span class="sc-bXTejn glsbck">{{twoDec}}</span><span
                         class="sc-eGRUor edJfyB">{{fourDec}}</span></div>
             </h1>
         </div>
@@ -143,7 +143,7 @@
                             <div class="Title_wrapper__1M0ZE">
                                 <h1 class="Title_h5__19dLf Title_medium__zzETA Title_right__ToG9D Title_default__1PPrv"
                                     data-cy="balances-DAIx-value" style="font-variant-numeric: tabular-nums;">
-                                    ${{stream.balanceDAI}}
+                                    ${{(balanceDAI)}}
                                 </h1>
                             </div>
                         </span></div>
