--- a/src/app/6-super-fluid/shared/components/stream-display/stream-display/stream-display.component.html
+++ b/src/app/6-super-fluid/shared/components/stream-display/stream-display/stream-display.component.html
@@ -1,10 +1,10 @@
 <div id="dashboard-main-data" class="sc-ehCJOs epQOzm">
     <div class="sc-nVkyK glXHDA" style="height: 360px; flex-grow: 1;">
-        <div class="Title_wrapper__1M0ZE">
+        <div *ngIf="display_type == 'FLOW'" class="Title_wrapper__1M0ZE">
             <h1 class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
                 data-cy="your_balance_in">Stream  in USD</h1>
         </div>
-        <div class="Title_wrapper__1M0ZE">
+        <div  *ngIf="display_type == 'FLOW'" class="Title_wrapper__1M0ZE">
             <h1 class="Title_h1__3XnJ3 Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
                 data-cy="total_balance" style="font-variant-numeric: tabular-nums;">
                 <div class="sc-fbyfCU eXneDc">$<span class="sc-gsNilK fWhdln"></span><span
@@ -12,7 +12,7 @@
                         class="sc-eGRUor edJfyB">{{fourDec}}</span></div>
             </h1>
         </div>
-        <div class="sc-ctqQKy cnURre" style="display: flex;">
+        <!-- <div class="sc-ctqQKy cnURre" style="display: flex;">
             <div color="#000000" class="sc-dFtzxp cmkznv">
                 <div class="sc-brSvTw hmCvOk"><span style="z-index: 1;">
                         <p> | NaN% | 0.00</p>
@@ -23,8 +23,8 @@
                         <p>DAIx | 100% | 1000.94</p>
                     </span></div>
             </div>
-        </div>
-        <div class="Card_wrapper__Q4Y0q" style="height: auto; position: relative; margin-top: 12px; display: block;">
+        </div> -->
+        <div   class="Card_wrapper__Q4Y0q" style="height: auto; position: relative; margin-top: 12px; display: block;">
             <div id="balanceInfo" class="sc-fHeRUh WpAFE">
                 <div color="#F5AC37" class="sc-hAcGzb hafBMv">
                     <div data-cy="balances-currency-icon" class="sc-ilfuhL sc-eGPXGI jeclXO krhdVj"><img
@@ -239,9 +239,9 @@
             </div>
         </div>
     </div>
-    <div id="net-flow" class="sc-nVkyK glXHDA" style="flex-grow: 1;">
+    <div id="net-flow"  class="sc-nVkyK glXHDA" style="flex-grow: 1;">
         <div class="Card_wrapper__Q4Y0q" style="padding: 32px;">
-            <div class="sc-ksHpcM hkPZIR">
+            <div *ngIf="display_type == 'FLOW'" class="sc-ksHpcM hkPZIR">
                 <div class="sc-jlsrNB gRWsMH"><span class="sc-iWBNLc kiYvKG">
                         <div class="Title_wrapper__1M0ZE">
                             <h1 class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
@@ -254,6 +254,86 @@
                                 <div class="sc-jvvksu jcGDKI"><span data-cy="total_flow_rate"
                                         style="font-variant-numeric: tabular-nums;">${{monthlyInflow}}
                                     </span><span></span></div>
+                            </h1>
+                        </div>
+                    </span></div>
+
+
+                <div class="sc-kHxTfl evtMrq">
+                    <div class="Title_wrapper__1M0ZE">
+                        <h1 class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv">Streaming
+                            in &amp; out</h1>
+                    </div>
+                    <div *ngFor="let stream of positive" class="sc-cVAmsi cJcRNl"><span class="sc-dkqQuH iSZbrz">
+                            <div class="Title_wrapper__1M0ZE">
+                                <h1 class="Title_h5__19dLf Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                    data-cy="total_incomming" style="font-variant-numeric: tabular-nums;">
+                                    +${{stream.value}}</h1>
+                            </div>
+                        </span><span class="sc-eicpiI bkdREN">
+                            <div class="Title_wrapper__1M0ZE">
+                                <h1 class="Title_small__359S9 Title_body__fA6cP Title_left__S2mjG Title_default__1PPrv">
+                                    month</h1>
+                            </div>
+                        </span><span class="sc-ewSTlh kWOzZj"><svg width="24px" height="24px" viewBox="0 0 24 24">
+                                <g fill="none">
+                                    <path d="M0 0h24v24H0z"></path>
+                                    <path fill="#10BB34" d="m17 14-5-5-5 5z"></path>
+                                </g>
+                            </svg></span>
+                            <span style="line-height: 24px;"> {{
+                                stream.address.slice(0, 5) +
+                                "..." +
+                                stream.address.slice(
+                                stream.address.length - 5,
+                                stream.address.length
+                                )
+                                }}</span>
+                    </div>
+                    <div *ngFor="let stream of negative" class="sc-cVAmsi cJcRNl"><span class="sc-dkqQuH iSZbrz">
+                            <div class="Title_wrapper__1M0ZE">
+                                <h1 class="Title_h5__19dLf Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                    data-cy="total_outgoing" style="font-variant-numeric: tabular-nums;">
+                                    -${{stream.value}}</h1>
+                            </div>
+                        </span><span class="sc-eicpiI bkdREN">
+                            <div class="Title_wrapper__1M0ZE">
+                                <h1 class="Title_small__359S9 Title_body__fA6cP Title_left__S2mjG Title_default__1PPrv">
+                                    month</h1>
+                            </div>
+                        </span><span class="sc-ewSTlh kWOzZj"><svg xmlns="http://www.w3.org/2000/svg" width="24px"
+                                height="24px" viewBox="0 0 24 24">
+                                <g fill="none">
+                                    <path d="M0 0h24v24H0z"></path>
+                                    <path fill="#F3023B" d="m7 10 5 5 5-5z"></path>
+                                </g>
+                            </svg></span>
+                        <span style="line-height: 24px;"> {{
+                            stream.address.slice(0, 5) +
+                            "..." +
+                            stream.address.slice(
+                            stream.address.length - 5,
+                            stream.address.length
+                            )
+                            }}</span>
+                    </div>
+
+                </div>
+            </div>
+            <div *ngIf="display_type == 'IDA'" class="sc-ksHpcM hkPZIR">
+                <div class="sc-jlsrNB gRWsMH"><span class="sc-iWBNLc kiYvKG">
+                        <div class="Title_wrapper__1M0ZE">
+                            <h1 class="Title_h4__2Vakp Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv"
+                                data-cy="monthly_net_message">Indexes <span
+                                    style="color: rgb(16, 187, 52);"></span></h1>
+                        </div>
+                    </span><span class="sc-edERGn iBCyTO">
+                        <div class="Title_wrapper__1M0ZE">
+                            <h1 class="Title_h2__DJAA2 Title_medium__zzETA Title_left__S2mjG Title_default__1PPrv">
+                                <div *ngFor="let index of stream.indexs" class="sc-jvvksu jcGDKI"><span data-cy="total_flow_rate"
+                                        style="font-variant-numeric: tabular-nums;">{{index.id}}
+                                    </span><span></span>
+                                </div>
                             </h1>
                         </div>
                     </span></div>
